--- a/cameratest/cameratest/cameratest/AppResources.resx
+++ b/cameratest/cameratest/cameratest/AppResources.resx
@@ -117,13 +117,100 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="forgotPassword" xml:space="preserve">
+  <data name="str_addPicture" xml:space="preserve">
+    <value>Foto hinzufügen</value>
+  </data>
+  <data name="str_alreadyExistingUserName" xml:space="preserve">
+    <value>Der Benutzername existiert bereits</value>
+  </data>
+  <data name="str_breakdown" xml:space="preserve">
+    <value>mc:breakdown</value>
+  </data>
+  <data name="str_companyName" xml:space="preserve">
+    <value>Name Ihrer Firma</value>
+  </data>
+  <data name="str_enterUserData" xml:space="preserve">
+    <value>Bitte geben Sie Ihre Benutzerdaten ein</value>
+  </data>
+  <data name="str_error" xml:space="preserve">
+    <value>Fehler</value>
+  </data>
+  <data name="str_faq" xml:space="preserve">
+    <value>Häufig gestellte Fragen</value>
+  </data>
+  <data name="str_fillAll" xml:space="preserve">
+    <value>Bitte füllen Sie alle Felder aus</value>
+  </data>
+  <data name="str_forgotPassword" xml:space="preserve">
     <value>Passwort vergessen</value>
   </data>
-  <data name="password" xml:space="preserve">
+  <data name="str_login" xml:space="preserve">
+    <value>Bitte geben Sie Ihre Logindaten ein</value>
+  </data>
+  <data name="str_machineNumber" xml:space="preserve">
+    <value>Maschinennummer</value>
+  </data>
+  <data name="str_name" xml:space="preserve">
+    <value>Name Vorname</value>
+  </data>
+  <data name="str_noConnection" xml:space="preserve">
+    <value>Keine Verbindung zum Server</value>
+  </data>
+  <data name="str_nonMatchingPasswords" xml:space="preserve">
+    <value>Die Passwörter stimmen nicht überein</value>
+  </data>
+  <data name="str_notRegistered" xml:space="preserve">
+    <value>Nicht registrierte Benutzerdaten</value>
+  </data>
+  <data name="str_onSuccess" xml:space="preserve">
+    <value>Erfolgreich</value>
+  </data>
+  <data name="str_other" xml:space="preserve">
+    <value>Andere</value>
+  </data>
+  <data name="str_password" xml:space="preserve">
     <value>Passwort</value>
   </data>
-  <data name="str_login" xml:space="preserve">
-    <value>msljfdaksjfdlasjdl</value>
+  <data name="str_passwordAgain" xml:space="preserve">
+    <value>Passwort wiederholen</value>
+  </data>
+  <data name="str_phoneNumber" xml:space="preserve">
+    <value>Telefonnummer</value>
+  </data>
+  <data name="str_problemDescription" xml:space="preserve">
+    <value>Problembeschreibung</value>
+  </data>
+  <data name="str_question" xml:space="preserve">
+    <value>Frage</value>
+  </data>
+  <data name="str_register" xml:space="preserve">
+    <value>Registrierung</value>
+  </data>
+  <data name="str_registerSuccess" xml:space="preserve">
+    <value>Ihre Registrierung war erfolgreich, Sie können sich jetzt einloggen</value>
+  </data>
+  <data name="str_reportBug" xml:space="preserve">
+    <value>Einen Fehler melden</value>
+  </data>
+  <data name="str_send" xml:space="preserve">
+    <value>Senden</value>
+  </data>
+  <data name="str_sortOfProblem" xml:space="preserve">
+    <value>Art des Problems</value>
+  </data>
+  <data name="str_spareParts" xml:space="preserve">
+    <value>Ersatzteile</value>
+  </data>
+  <data name="str_typeOfMachine" xml:space="preserve">
+    <value>Art der Maschine</value>
+  </data>
+  <data name="str_validMailAdress" xml:space="preserve">
+    <value>Bitte geben Sie eine gültige E-Mail Adresse an</value>
+  </data>
+  <data name="str_videos" xml:space="preserve">
+    <value>Videos zur Problembehandlung</value>
+  </data>
+  <data name="str_wrongUserNameOrPassword" xml:space="preserve">
+    <value>Der Benutzername oder das Passwort ist falsch</value>
   </data>
 </root>
